fixed facebook/twitter button misalignment

--- a/main.css
+++ b/main.css
@@ -150,6 +150,7 @@ body{
     margin:12px 0;
     color:black;
     height:24px;
+    line-height:10px;
 }
 #flex-item-sharer a{
     text-decoration:none;
